force-app/main/default/objects/Multa__c/Multa__c.object-meta.xml
<CustomObject>
    <label>Multa</label>
    <nameField>
        <label>Multa Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Multas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>