force-app/main/default/objects/Multa__c/fields/Aeronave__c.field-meta.xml
<CustomField>
    <fullName>Aeronave__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aeronave</label>
    <referenceTo>Aeronave__c</referenceTo>
    <relationshipLabel>Multas</relationshipLabel>
    <relationshipName>Multas</relationshipName>
    <type>Lookup</type>
</CustomField>