force-app/main/default/objects/Multa__c/fields/Base__c.field-meta.xml
<CustomField>
    <fullName>Base__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base</label>
    <referenceTo>Local__c</referenceTo>
    <relationshipLabel>Multas</relationshipLabel>
    <relationshipName>Multas</relationshipName>
    <type>Lookup</type>
</CustomField>