force-app/main/default/objects/Multa__c/fields/Caso__c.field-meta.xml
<CustomField>
    <fullName>Caso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Multas</relationshipLabel>
    <relationshipName>Multas</relationshipName>
    <type>Lookup</type>
</CustomField>