force-app/main/default/objects/Multa__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Multas</relationshipLabel>
    <relationshipName>Multas</relationshipName>
    <type>Lookup</type>
</CustomField>