force-app/main/default/objects/Multa__c/fields/DataOcorrencia__c.field-meta.xml
<CustomField>
    <fullName>DataOcorrencia__c</fullName>
    <label>Data da Ocorrência</label>
    <type>Date</type>
</CustomField>