force-app/main/default/objects/Multa__c/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>