force-app/main/default/objects/Multa__c/fields/PrazoDefesa__c.field-meta.xml
<CustomField>
    <fullName>PrazoDefesa__c</fullName>
    <label>Prazo de Defesa</label>
    <type>Date</type>
</CustomField>