force-app/main/default/objects/Multa__c/fields/ValorDolar__c.field-meta.xml
<CustomField>
    <fullName>ValorDolar__c</fullName>
    <label>Valor em Dólar (U$)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>