force-app/main/default/objects/Multa__c/fields/ValorReal__c.field-meta.xml
<CustomField>
    <fullName>ValorReal__c</fullName>
    <label>Valor em Real (R$)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>