force-app/main/default/objects/Multa__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DataOcorrencia__c</columns>
    <columns>Base__c</columns>
    <columns>Aeronave__c</columns>
    <columns>Status__c</columns>
    <columns>ValorReal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>