force-app/main/default/objects/Multa__c/listViews/Multas_com_Defesa_Recusada.listView-meta.xml
<ListView>
    <fullName>Multas_com_Defesa_Recusada</fullName>
    <columns>NAME</columns>
    <columns>DataOcorrencia__c</columns>
    <columns>Base__c</columns>
    <columns>Aeronave__c</columns>
    <columns>ValorReal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Defesa Recusada</value>
    </filters>
    <label>Multas com Defesa Recusada</label>
</ListView>