force-app/main/default/objects/Multa__c/listViews/Multas_Faturadas.listView-meta.xml
<ListView>
    <fullName>Multas_Faturadas</fullName>
    <columns>NAME</columns>
    <columns>DataOcorrencia__c</columns>
    <columns>Base__c</columns>
    <columns>Aeronave__c</columns>
    <columns>ValorReal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Faturada</value>
    </filters>
    <label>Multas Faturadas</label>
</ListView>